0027863: Geom_BSplineSurface::SetVKnot(const Standard_Integer, const Standard_Real) has no effect

Fix Geom_BSplineSurface::SetVKnot function to have the same behavior as SetUKnot.